--- a/portfolio2016/css/freelancer.css
+++ b/portfolio2016/css/freelancer.css
@@ -191,6 +191,8 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+	padding-left: 0px;
+    padding-right: 0px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
